--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-wikipedia
-pytest
-pytest-cov
-pylint
-black
-fire
+wikipedia==1.4.0
+pytest==7.4.3
+pytest-cov==4.1.0
+pylint==3.0.2
+black==23.11.0
+fire==0.5.0
